--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14"
